--- a/index.html
+++ b/index.html
@@ -1,13 +1,95 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title></title>
-	<link rel="stylesheet" type="text/css" href="basic.css">
-</head>
-<body>
-	<svg width="960" height="600"></svg>
-	<script src="https://d3js.org/d3.v4.min.js"></script>
-	<script src="script.js"></script>
-	<script src="https://d3js.org/topojson.v2.min.js"></script>
-</body>
-</html>
+<style>
+
+.states :hover {
+  fill-opacity: .7;
+}
+
+.states {
+  fill: #ccc;
+  stroke: #fff;
+}
+
+.symbol {
+  fill: steelblue;
+  fill-opacity: .8;
+  stroke: #fff;
+}
+
+.state-borders {
+  fill: none;
+  stroke: #fff;
+  stroke-width: 0.5px;
+  stroke-linejoin: round;
+  stroke-linecap: round;
+  pointer-events: none;
+}
+
+</style>
+<svg width="960" height="600"></svg>
+<script src="https://d3js.org/d3.v4.min.js"></script>
+<!-- <script src="https://d3js.org/d3.v3.min.js"></script> -->
+<script src="https://d3js.org/topojson.v2.min.js"></script>
+
+<script>
+
+var svg = d3.select("svg");
+
+var width = 960,
+    height = 500,
+    radius = 30;
+
+var projection = d3.geoAlbersUsa()
+  .translate([width/2, height/1.67])
+  .scale([1275]);
+var path = d3.geoPath();
+  // .projection(projection);
+  // .pointRadius(1.5);
+var g2 = svg.append("g");
+d3.csv("https://raw.githubusercontent.com/rohantadphale/VDS_hw2/master/SlateGunDeaths.csv", function(error, data) {
+  if (error) throw error;
+
+  var points = g2.selectAll("g")
+    .data(data)
+    .enter()
+    .append("g")
+    data.forEach(function(d){
+      d.age = +d.age;
+      d.ageGroup = +d.ageGroup;
+      d.lat = +d.lat;
+      d.lng = +d.lng;
+      d.isMale = (d.gender != "M")? 0 : 1;
+      d.date = new Date(d.date);
+      // console.log(d.isMale);
+      svg.append("circle")
+      .attr('class', 'symbol')
+      .attr("r",5)
+      .attr("transform", function() {return "translate(" + projection([d.lat,d.lng]) + ")";});
+      console.log(d.lng);
+      // break;
+    });
+
+    // for(var i=0; i<data.length; i++){
+    // svg.append("circle")
+    //   .attr('class', 'symbol')
+    //   .attr("r",5)
+    //   .attr("transform", function() {return "translate(" + projection([data[i].long,data[i].lat]) + ")";});
+    // }
+});
+
+d3.json("https://d3js.org/us-10m.v1.json", function(error, us) {
+  if (error) throw error;
+
+  svg.append("g")
+      .attr("class", "states")
+    .selectAll("path")
+    .data(topojson.feature(us, us.objects.states).features)
+    .enter().append("path")
+      .attr("d", path);
+
+  svg.append("path")
+      .attr("class", "state-borders")
+      .attr("d", path(topojson.mesh(us, us.objects.states, function(a, b) { return a !== b; })));
+});
+
+</script>
